<resources>
    <string name="app_name">acquaintances</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Failed login! Please, check login and password!</string>
    <string name="register_failed">Unable to register account!</string>
    <string name="entry">Войти</string>
    <string name="create_acc">Создать аккаунт</string>
    <string name="enter_the_password">Введите пароль</string>
    <string name="enter_the_e_mail">Введите e-mail</string>
    <string name="enter_the_data">Введите данные</string>
    <string name="successfully">Успешно</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="acc_create_succ">Аккаунт создан</string>
    <string name="pass_dont_match">Пароли не совпадают</string>
    <string name="continue_but">Продолжить</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="add_photo">Добавить фото</string>
    <string name="age">Возраст</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
</resources>